--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "NayLaBotz",
+  "name": "WinkyBotz",
   "version": "14.18.2",
-  "description": "© nayla",
+  "description": "© winky",
   "depecrated": "false",
   "main": "index.js",
   "directories": {
